--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,27 +10,37 @@ source:
   sha256: 6c14bbc8909d5ecd3fd21a4bef92334aa353a9f8d5ae73d7c42edf1caa37b0b9
 
 build:
+  entry_points:
+    - htgettoken = htgettoken:main
   number: 0
   skip: true  # [win]
 
 requirements:
   build:
-    - python                                 # [build_platform != target_platform]
-    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - sed  # [unix]
+    - python                              # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}  # [build_platform != target_platform]
   host:
+    - pip
     - python
+    - setuptools >=30.3.0
+    - wheel
   run:
     - jq
-    - m2crypto
     - paramiko
-    - pykerberos  # [not win]
-    - pyopenssl
     - python
-    - winkerberos  # [win]
+    - python-gssapi
+    - urllib3
 
 test:
+  requires:
+    - pip
+  imports:
+    - htgettoken
   commands:
+    # check metadata
+    - python -m pip check
+    - python -m pip show htgettoken
+    # test scripts
     - htgettoken --help
     - test -x ${PREFIX}/bin/htdecodetoken  # [unix]
     - test -x ${PREFIX}/bin/htdestroytoken  # [unix]
