--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -6,4 +6,6 @@ conda_forge_output_validation: true
 github:
   branch_name: main
   tooling_branch_name: main
+noarch_platforms:
+  - win_64
 test: native_and_emulated
